--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -1,6 +1,10 @@
 {% extends 'core/base.html' %}
 
-{% block content %}
-    <p>Bienvenido a mi página de inicio.</p>
-    <!-- Más contenido específico de la página de inicio -->
+{% block title %}Portada{% endblock %}
+
+{% block background %}{% load static %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+<h1>Juan Pérez</h1>
+<span class="subheading">Ingeniero Industrial</span>
 {% endblock %}
